# cookiecutter-cppyy-cmake

./: .gitignore  LICENSE  README.md  cookiecutter.json
tests/: test_bake_project.py
{{cookiecutter.pkg_name}}/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  interface.hh  selection.xml
{{cookiecutter.pkg_name}}/py/: initializor.py
{{cookiecutter.pkg_name}}/py/tests/: test_{{cookiecutter.cpp_lib_name}}.py
{{cookiecutter.pkg_name}}/src/{{cookiecutter.cpp_lib_name}}/: {{cookiecutter.cpp_lib_name}}.cpp  {{cookiecutter.cpp_lib_name}}.hh
{{cookiecutter.repo_name}}/: .travis.yml  CMakeLists.txt  README.md  README.rst  interface.hh  manifest.cmake  selection.xml
{{cookiecutter.repo_name}}/pkg_templates/: __init__.py.in
{{cookiecutter.repo_name}}/py/: initializor.py
{{cookiecutter.repo_name}}/py/tests/: test_{{cookiecutter.cpp_lib_name}}.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.cpp_lib_name}}/: {{cookiecutter.cpp_lib_name}}.cpp  {{cookiecutter.cpp_lib_name}}.hh
